--- a/_posts/2025-01-23-warp-ctf-2024.md
+++ b/_posts/2025-01-23-warp-ctf-2024.md
@@ -21,7 +21,7 @@ Prize: 1st prize(200,000₩)
 
 웹 문제가 정말 재밌어서 출제자님을 존경한다.
 
-참고로 [tuple](https://tuplest.github.io/posts/WaRP-CTF-2024-Write-Up/)의 블로그를 보고 가독성이 훨씬 낫다고 생각해서 블로그를 옮겼다. - 딱히 버스는 아니다.
+참고로 [tuplest](https://tuplest.github.io/posts/WaRP-CTF-2024-Write-Up/)의 블로그를 보고 가독성이 훨씬 낫다고 생각해서 블로그를 옮겼다. - 딱히 버스는 아니다.
 
 ## WEB
 
