--- a/_posts/2025-01-23-warp-ctf-2024.md
+++ b/_posts/2025-01-23-warp-ctf-2024.md
@@ -4,16 +4,9 @@ description: WaRP CTF 2024 Write Up(web/misc)
 author: goldleo1
 date: 2025-01-23 12:00:00 +0800
 categories: [ctf]
-tags: [ctf]
+tags: [ctf, "2025"]
 pin: false
 ---
-
-```yaml
-# WaRP CTF 2024
-Date: 2024/12/27 ~ 2024/12/29
-Place: 1/20
-Prize: 1st prize(200,000₩)
-```
 
 ## WaRP CTF 2024
 
@@ -117,7 +110,7 @@ print(flag)
 
 요즘들어 golang과 Go의 웹 프레임워크인 Gin을 활용한 문제가 많이 출제되는 것 같다.
 
-언인텐이 없었다면 훨씬 어려웠던 문제이다.
+언인텐이 없었다면 살짝 더 어려웠던 문제이다.
 
 {::options parse_block_html="true" /}
 
@@ -338,15 +331,18 @@ func addAuthRoutes(rg *gin.RouterGroup) {
 
 {: file="routes/admin.go" }
 
-`routes/auth.go`에서는 login을 관리하는데 L68에서 err을 재사용하는 취약점이 발생한다.
+~~`routes/auth.go`에서는 login을 관리하는데 L68에서 err을 재사용하는 취약점이 발생한다.~~
 
-[hxp 38C3 CTF: Fajny Jagazyn Wartości Kluczy](https://hxp.io/blog/114/hxp-38C3-CTF-Fajny-Jagazyn-Wartoci-Kluczy/)
+~~[hxp 38C3 CTF: Fajny Jagazyn Wartości Kluczy](https://hxp.io/blog/114/hxp-38C3-CTF-Fajny-Jagazyn-Wartoci-Kluczy/)~~
 
-최근에 FMC에서 한 hxp 38C3 CTF에도 해당 취약점이 출제되었고 9 solve(Hard?)가 났다.
+~~최근에 FMC에서 한 hxp 38C3 CTF에도 해당 취약점이 출제되었고 9 solve(Hard?)가 났다.~~
 
 그러나 `docker-compose.yml`에서 `JWT_KEY=furicbhi3ufh348fhe34if`이 유출되어 언인텐이 터졌다.
 
-그래서 로컬에서 admin계정 생성 후 로그인하여 토큰을 그대로 사용하면 된다.
+~~그래서 로컬에서 admin계정 생성 후 로그인하여 토큰을 그대로 사용하면 된다.~~
+
+(수정 - 2025.4.8) 코드 잘못 봤다. 그냥 [트릭](https://goldleo1.github.io/posts/mysql-string-bypass/#2-mysql-collation-trick-a--%C3%A3)써서
+test계정으로 로그인하면된다. (kİmgildong123/0p1q9o2w8i3e)
 
 ```golang
 ...
